--- a/Backend/django/learning_templates/templates/basic_app/base.html
+++ b/Backend/django/learning_templates/templates/basic_app/base.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base</title>
+    <title> {% block page-title %} {% endblock %} </title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <style>
+        nav ul li{
+            padding : 0 10px 0 10px;
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>Base Page</h1>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-static-top">
+        <div class="container-fluid">
+        <a href="{% url 'index'%}" class="navbar-brand"> BRAND</a></li>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-nav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapase navbar-collapse" id="collapse-nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="{% url 'admin:index' %}" class="navbar-link"> Admin </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'basic:other' %}" class="navbar-link"> Other </a>
+                        </li>
+                    </ul>
+                </div>
+        </div>
+    </nav>
+        
+        {% block body_block %}
+            <!-- ANYTHING IN HERE WOULD BE ONLY IN THIS PAGE  -->
+        {% endblock %}
     
 </body>
 </html>
