--- a/Backend/django/learning_templates/templates/basic_app/index.html
+++ b/Backend/django/learning_templates/templates/basic_app/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to the home page!</h1>
-    <a href="{% url 'basic:base' %}">Go to the Base Page</a>
-</body>
-</html>
+{% extends "basic_app/base.html" %}
+    {% block page-title %}
+        INDEX PAGE
+    {% endblock %}
+    {% block body_block %}
+    {% load extras1 %}
+        <div class="container">
+            <div class="jumbotron">
+                <h1>
+                    WELCOME TO THE SITE
+                </h1>
+            </div>
+            <h1>{{text|cut:'hello'}}</h1>
+            <h1>{{number|add:'99'}}</h1>
+        </div>
+    {% endblock %}
