--- a/Backend/django/advanced_topics/class_based_views/basic_app/templates/basic_app/school_details.html
+++ b/Backend/django/advanced_topics/class_based_views/basic_app/templates/basic_app/school_details.html
@@ -16,5 +16,8 @@
                 <li>{{student.name}} is {{student.age}} years old.</li>
             {% endfor %}
         </ul>
+        <button class="btn-warning btn">
+            <a href="{% url 'base:school_update' pk=school_details.pk%}">Update</a>
+        </button>
     </div>
 {% endblock %}
