--- a/Backend/django/myblogsite/blog/static/css/styles.css
+++ b/Backend/django/myblogsite/blog/static/css/styles.css
@@ -4,6 +4,24 @@
   margin-bottom: 10%;
 }
 
+.center_heading{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.right_heading{
+  text-align: right;
+}
+
+.centerpost{
+  font-family: 'Caprasimo', cursive;
+  /* text-align: center;
+  margin-left: auto;
+  margin-right: auto; */
+  font-size: 1.5em;
+}
+
 .loader {
     filter: hue-rotate(0deg);
     color: linear-gradient(45deg,#0f8,#08f);
