--- a/Backend/django/myblogsite/blog/templates/blog/about.html
+++ b/Backend/django/myblogsite/blog/templates/blog/about.html
@@ -1,8 +1,9 @@
 {% extends 'blog/base.html' %}
 {% block title %}
-ABOUT PAGE
+    ABOUT PAGE
 {% endblock title %}
 {% block body_block %}
-<h1>ABOUT PAGE</h1>
+    <h1>ABOUT PAGE</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In iusto, cum, illum, enim obcaecati quibusdam distinctio molestiae reprehenderit minus vero repellendus alias ut labore nihil numquam. Molestiae iusto repellat deserunt?</p>
 {% endblock body_block %}
 
