--- a/Backend/django/myblogsite/blog/templates/blog/base.html
+++ b/Backend/django/myblogsite/blog/templates/blog/base.html
@@ -55,7 +55,7 @@
     </nav>
     <div class="content container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-offset-2 col-md-8">
                 <div class="blog_posts">
                     {% block body_block %}
                 
