--- a/Backend/django/myblogsite/blog/templates/blog/comment_form.html
+++ b/Backend/django/myblogsite/blog/templates/blog/comment_form.html
@@ -9,5 +9,7 @@
         {{form.as_p}}
         <input type="submit" class="btn btn-success" value="CREATE COMMENT">
     </form>
+
+    <script>var editor = new MediumEditor('.editable');</script>
 {% endblock body_block %}
 
