--- a/Backend/django/myblogsite/blog/templates/blog/post_form.html
+++ b/Backend/django/myblogsite/blog/templates/blog/post_form.html
@@ -16,5 +16,6 @@
         <input type="submit" value="SUBMIT" class="btn btn-success">
     </form>
 
+    <script>var editor = new MediumEditor('.editable');</script>
 {% endblock body_block %}
 
