debugging the social site clone

--- a/simple_social/groups/templates/groups/group_detail.html
+++ b/simple_social/groups/templates/groups/group_detail.html
@@ -27,7 +27,9 @@
         {% if group.post.count == 0%}
             <h2>No Posts in this group yet!!</h2>
         {% else %}
-            {% include 'posts/_post.html' %}
+            {% for post in group.post.objects.all %}
+                {% include 'posts/_post.html' %}
+            {% endfor %}
         {% endif %}
     </div>
 {% endblock %}
