--- a/simple_social/posts/templates/posts/post_list.html
+++ b/simple_social/posts/templates/posts/post_list.html
@@ -14,9 +14,9 @@
                     <ul class="list-unstyled">
                         {% for member_group in user_groups %}
                             <li class="group li-with-bullet">
-                                <a href="{% url 'grouops:single' slug=member_group.group.slug %}">member_group.group.name</a>
+                                <a href="{% url 'groups:single' slug=member_group.group.slug %}">member_group.group.name</a>
                             </li>
-                        {% enfor %}
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
@@ -27,9 +27,9 @@
                     <ul class="list-unstyled">
                         {% for other_group in other_groups %}
                             <li class="group li-with-bullet">
-                                <a href="{% url 'grouops:single' slug=other_group.slug %}">other_group.group.name</a>
+                                <a href="{% url 'groups:single' slug=other_group.slug %}">other_group.group.name</a>
                             </li>
-                        {% enfor %}
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
