--- a/simple_social/templates/base.html
+++ b/simple_social/templates/base.html
@@ -31,13 +31,13 @@
             
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                    <li><a href="#" class="navbar-item">Posts</a></li>
-                    <li><a href="#" class="navbar-item">Groups</a></li>
-                    <li><a href="#" class="navbar-item">Create Group</a></li>
+                    <li><a href="{% url 'posts:all' %}" class="navbar-item">Posts</a></li>
+                    <li><a href="{% url 'groups:all' %}" class="navbar-item">Groups</a></li>
+                    <li><a href="{% url 'groups:create' %}" class="navbar-item">Create Group</a></li>
                     <li><a href="{% url 'accounts:logout' %}" class="navbar-item">Logout</a></li>
                     
                 {% else %}
-                    <li><a href="#" class="navbar-item">Groups</a></li>
+                    <li><a href="{% url 'groups:all' %}" class="navbar-item">Groups</a></li>
                     <li><a href="{% url 'accounts:login' %}" class="navbar-item">Login</a></li>
                     <li><a href="{% url 'accounts:signup' %}" class="navbar-item">SignUp</a></li>
                 {% endif %}
