--- a/simple_social/posts/templates/posts/post_list.html
+++ b/simple_social/posts/templates/posts/post_list.html
@@ -14,26 +14,31 @@
                     <ul class="list-unstyled">
                         {% for member_group in user_groups %}
                             <li class="group li-with-bullet">
-                                <a href="{% url 'groups:single' slug=member_group.group.slug %}">member_group.group.name</a>
+                                <a href="{% url 'groups:single' slug=member_group.group.slug %}">{{member_group.group.name}}</a>
                             </li>
                         {% endfor %}
                     </ul>
                 </div>
             </div>
-            {% endif %}
-            <div class="card card-with-shadow">
-                <div class="content">
-                    <h3 class="title">All Groups</h3>
-                    <ul class="list-unstyled">
-                        {% for other_group in other_groups %}
-                            <li class="group li-with-bullet">
-                                <a href="{% url 'groups:single' slug=other_group.slug %}">other_group.group.name</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
+        {% endif %}
+        <div class="card card-with-shadow">
+            <div class="content">
+                <h3 class="title">All Groups</h3>
+                <ul class="list-unstyled">
+                {% for other_group in other_groups %}
+                    <li class="group li-with-bullet">
+                        <a href="{% url 'groups:single' slug=other_group.slug %}">{{other_group.group.name}}</a>
+                    </li>
+                {% endfor %}
+                </ul>
             </div>
+        </div>
     </div>
+        {% for other_group in other_groups %}
+                <a href="{% url 'groups:single' slug=other_group.slug %}">{{other_group}}</a>
+        {% endfor %}
+    <h3>{{request.user.user_groups}}</h3>
+    <h3>{{other_group}}</h3>
 {% endblock %}
 
 {% block post-content %}
