added final styling

--- a/simple_social/templates/base.html
+++ b/simple_social/templates/base.html
@@ -51,5 +51,7 @@
     
         {% endblock %}
     </div>
+
+    <script type = "module" src="{% static 'javascript/script.js' %}"></script>
 </body>
 </html>
