--- a/simple_social/templates/index.html
+++ b/simple_social/templates/index.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
+
 {% block title_block %}
     HOME PAGE
 {% endblock %}
 
 {% block content_block %}
-    <h1>welcome to the stars social site </h1>
+    <h1 class="center">welcome to the stars social site </h1>
+    <canvas id="canvas"></canvas>
 {% endblock %}
